--- a/common-ramcache/pom.xml
+++ b/common-ramcache/pom.xml
@@ -3,8 +3,8 @@
 		 xmlns="http://maven.apache.org/POM/4.0.0"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>com.thor.common</groupId>
-		<artifactId>thor</artifactId>
+		<groupId>com.ariescat</groupId>
+		<artifactId>game-seed.zeus</artifactId>
 		<version>1.5</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
@@ -16,7 +16,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.thor.common</groupId>
+			<groupId>com.ariescat</groupId>
 			<artifactId>common-utility</artifactId>
 		</dependency>
 		<dependency>
