--- a/common/common-event/pom.xml
+++ b/common/common-event/pom.xml
@@ -3,10 +3,9 @@
 		 xmlns="http://maven.apache.org/POM/4.0.0"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>com.ariescat</groupId>
+		<groupId>com.ariescat.zeus</groupId>
 		<artifactId>common</artifactId>
-		<version>1.5</version>
-		<relativePath>../pom.xml</relativePath>
+		<version>zeus-1.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -16,8 +15,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.ariescat</groupId>
+			<groupId>com.ariescat.zeus</groupId>
 			<artifactId>common-utility</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.ariescat.zeus</groupId>
+			<artifactId>common-thread</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
