--- a/common/common-scheduler/pom.xml
+++ b/common/common-scheduler/pom.xml
@@ -3,10 +3,9 @@
 		 xmlns="http://maven.apache.org/POM/4.0.0"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>com.ariescat</groupId>
+		<groupId>com.ariescat.zeus</groupId>
 		<artifactId>common</artifactId>
-		<version>1.5</version>
-		<relativePath>../pom.xml</relativePath>
+		<version>zeus-1.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -15,42 +14,24 @@
 	<description>定时任务支持</description>
 
 	<dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 		<dependency>
-			<groupId>com.ariescat</groupId>
+			<groupId>com.ariescat.zeus</groupId>
 			<artifactId>common-utility</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>3.1.2.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<type>jar</type>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>3.1.2.RELEASE</version>
-			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>${maven.compiler.source}</source>
-					<target>${maven.compiler.target}</target>
-					<encoding>utf-8</encoding>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
