--- a/common/common-ramcache/pom.xml
+++ b/common/common-ramcache/pom.xml
@@ -3,7 +3,7 @@
 		 xmlns="http://maven.apache.org/POM/4.0.0"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>com.ariescat.zeus</groupId>
+		<groupId>com.ariescat</groupId>
 		<artifactId>common</artifactId>
 		<version>zeus-1.0</version>
 	</parent>
@@ -15,7 +15,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.ariescat.zeus</groupId>
+			<groupId>com.ariescat</groupId>
 			<artifactId>common-utility</artifactId>
 		</dependency>
 		<dependency>
