--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,8 +3,8 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>com.ariescat.zeus</groupId>
-		<artifactId>game-seed</artifactId>
+		<groupId>com.ariescat</groupId>
+		<artifactId>game-seed-zeus</artifactId>
 		<version>zeus-1.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -30,57 +30,57 @@
 		<dependencies>
 			<!--自己的模块-->
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-agent</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-event</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-net</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-profile</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-route</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-ramcache</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-resource</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-scheduler</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-text-table</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-thread</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.ariescat.zeus</groupId>
+				<groupId>com.ariescat</groupId>
 				<artifactId>common-utility</artifactId>
 				<version>${project.version}</version>
 			</dependency>
