--- a/common/common-text-table/pom.xml
+++ b/common/common-text-table/pom.xml
@@ -4,7 +4,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>common</artifactId>
-		<groupId>com.ariescat.zeus</groupId>
+		<groupId>com.ariescat</groupId>
 		<version>zeus-1.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
