--- a/game-test/pom.xml
+++ b/game-test/pom.xml
@@ -5,8 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.ariescat.zeus</groupId>
-		<artifactId>game-seed</artifactId>
+		<groupId>com.ariescat</groupId>
+		<artifactId>game-seed-zeus</artifactId>
 		<version>zeus-1.0</version>
 	</parent>
 
