--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.ariescat.zeus</groupId>
-	<artifactId>game-seed</artifactId>
+	<groupId>com.ariescat</groupId>
+	<artifactId>game-seed-zeus</artifactId>
 	<version>zeus-1.0</version>
 	<packaging>pom</packaging>
 
